--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "notebook>=7.4.7",
     "numpy>=2.3.4",
     "pandas>=2.3.3",
+    "pandas-stubs==2.3.2.250926",
     "pyod>=2.0.5",
     "scikit-learn>=1.7.2",
     "seaborn>=0.13.2",
