--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,27 @@ dependencies = [
     "matplotlib>=3.10.7",
     "notebook>=7.4.7",
     "numpy>=2.3.4",
+    "optuna>=4.5.0",
+    "optuna-dashboard>=0.19.0",
     "pandas>=2.3.3",
     "pandas-stubs==2.3.2.250926",
+    "plotly>=6.3.1",
     "pyod>=2.0.5",
     "scikit-learn>=1.7.2",
     "seaborn>=0.13.2",
     "wandb>=0.22.2",
     "xgboost>=3.1.1",
 ]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.14.3",
+]
+
+[build-system]
+requires = ["uv_build>=0.9.6,<0.10.0"]
+build-backend = "uv_build"
+
+[tool.uv.build-backend]
+module-name = "cosinecows"
+module-root = ""
