--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Regression task on features of RMI scan to predict brain age"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "catboost>=1.2.8",
     "ipympl>=0.9.8",
     "joblib>=1.5.2",
     "jupyterlab>=4.4.10",
